# plugsync

./: .gitignore  LICENSE  README.md  plugsync.yaml.example  pyproject.toml
examples/: plugsync.yaml
examples/dotfiles/: plugsync.yaml
skills/plugsync/: SKILL.md
src/plugsync/: main.py
tests/: test_repo_matches.py
